@@ -15,6 +15,9 @@ USER-VISIBLE CHANGES
 	'which' is not specified.
 	___ may change before release ___
 
+    o	graphics::xy.coords, xyz.coords and n2mfrow have been moved to
+	the grDevices name space (to be available in grid as well).
+
 
 NEW FEATURES
 
@@ -140,7 +143,7 @@ BUG FIXES
 	inconsistent time zones are used.
 
     o	Hershey fonts were being sized based on pixels not points so came
-        out too small on devices where pixels were noticeably different 
+        out too small on devices where pixels were noticeably different
 	from points (e.g., win.printer and high-resolution screens).
 
 	Fix means that default size of Hershey fonts may be slightly
